[gd_scene load_steps=20 format=2]

[ext_resource path="res://buttons & options/f.png" type="Texture" id=1]
[ext_resource path="res://buttons & options/Asset 1@4x.png" type="Texture" id=2]
[ext_resource path="res://buttons & options/Blank (3).png" type="Texture" id=3]
[ext_resource path="res://buttons & options/Blank (2).png" type="Texture" id=4]
[ext_resource path="res://fonts/boorsok.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://buttons & options/win@4x.png" type="Texture" id=6]
[ext_resource path="res://scripts/game win.gd" type="Script" id=7]
[ext_resource path="res://girl/candy-girl-game-sprites__3_.png" type="Texture" id=9]
[ext_resource path="res://girl/candy-girl-game-sprites__4.png" type="Texture" id=10]
[ext_resource path="res://girl/candy-girl-game-sprites__2.png" type="Texture" id=11]
[ext_resource path="res://girl/candy-girl-game-sprites__5.png" type="Texture" id=12]
[ext_resource path="res://map/Sky.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.00657895, 0.230263, 0.414474, 0.631579, 0.809211, 0.953947 )
colors = PoolColorArray( 1, 0.351563, 0.351563, 1, 0.757813, 0.195374, 0.195374, 1, 0.957031, 0.877357, 0.0299072, 1, 0.0774536, 0.210891, 0.734375, 1, 0.910156, 0.0284424, 0.772388, 1, 0.574897, 0.0647888, 0.753906, 1, 0.746942, 0.948826, 0.307627, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
render_priority = 1
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 128.0
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 8, 60, 1 )
spread = 58.4
gravity = Vector3( 100, 100, 20 )
initial_velocity = 308.51
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale = 5.0
color_ramp = SubResource( 5 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="game win" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bg" type="TextureRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/bg"]
position = Vector2( 215, 390 )
scale = Vector2( 1.20896, 1.244 )
frames = SubResource( 7 )
frame = 1
playing = true
flip_h = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="CanvasLayer/bg"]
position = Vector2( 1086, 397 )
scale = Vector2( 1.20896, 1.244 )
frames = SubResource( 7 )
playing = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -278.5
margin_top = 100.0
margin_right = 278.5
margin_bottom = 558.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -179.5
margin_top = -33.0
margin_right = 179.5
margin_bottom = 129.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -118.0
margin_top = 18.0
margin_right = 117.0
margin_bottom = 49.0
custom_colors/font_color = Color( 1, 0.941176, 0.164706, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.439216, 0.337255, 0.109804, 1 )
custom_fonts/font = SubResource( 1 )
text = "You Win!!!"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 82.0
margin_top = -38.5
margin_right = 269.0
margin_bottom = 38.5

[node name="Replay" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer"]
margin_right = 187.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Replay"
icon = ExtResource( 4 )
flat = true
icon_align = 1
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 285.0
margin_top = -38.5
margin_right = 472.0
margin_bottom = 38.5

[node name="Select Game" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer2"]
margin_right = 187.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Select Game"
icon = ExtResource( 4 )
flat = true
icon_align = 1
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.5
margin_top = -172.0
margin_right = 93.5
margin_bottom = -95.0

[node name="Main Menu" type="Button" parent="CanvasLayer/TextureRect/VBoxContainer3"]
margin_right = 187.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
icon = ExtResource( 3 )
flat = true
icon_align = 1
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/TextureRect"]
margin_left = 220.5
margin_top = 48.0
margin_right = 326.5
margin_bottom = 186.0
texture = ExtResource( 6 )
expand = true

[node name="Particles2D" type="Particles2D" parent="CanvasLayer"]
position = Vector2( 892, 1 )
amount = 102
speed_scale = 1.64
explosiveness = 1.0
process_material = SubResource( 6 )

[node name="Particles2D2" type="Particles2D" parent="CanvasLayer"]
position = Vector2( 361, 1 )
amount = 102
speed_scale = 1.64
explosiveness = 1.0
process_material = SubResource( 6 )

[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer2/Select Game" to="." method="_on_Select_Game_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/VBoxContainer3/Main Menu" to="." method="_on_Main_Menu_pressed"]
